tests/transpiler/x/java/sum_builtin.error
exit status 1
Main.java:4: error: cannot find symbol
        System.out.println(sum(new int[]{1, 2, 3}));
                           ^
  symbol:   method sum(int[])
  location: class Main
1 error
