tests/transpiler/x/java/sum_builtin.java
public class Main {
    public static void main(String[] args) {
        System.out.println(sum(new int[]{1, 2, 3}));
    }
}
